# odva_ethernetip

./: CMakeLists.txt  README.md  package.xml
include/odva_ethernetip/: connection.h  eip_types.h  forward_open_request.h  session.h
include/odva_ethernetip/serialization/: buffer_reader.h
src/: connection.cpp  session.cpp
